Cleaning up the API and adding a bit of documentation.

--- a/tests/index.html
+++ b/tests/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class="test-container"></div>
   <button class="test-toggle">
-    Test Viewport
+    Run tests
   </button>
   <script src="js/libs/require.js" data-main="js/main.js"></script>
 </body>
