--- a/tests/index.html
+++ b/tests/index.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="css/tests.css"/>
 </head>
 <body>
+  <div class="viewport-top-offset"></div>
+  <div class="viewport-bottom-offset"></div>
   <div class="test-container"></div>
   <button class="test-toggle">
     Run tests
