--- a/tests/index.html
+++ b/tests/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div class="viewport-top-offset"></div>
+  <div class="viewport-middle"></div>
   <div class="viewport-bottom-offset"></div>
   <div class="test-container"></div>
   <button class="test-toggle">
