Core functionality has been implemented, visual tests need to be implemented. All unit tests are passing.

--- a/tests/visual-tests.html
+++ b/tests/visual-tests.html
@@ -2,16 +2,13 @@
 <html>
 <head>
   <title>Viewport Tests</title>
-  <link rel="stylesheet" href="styles/tests.css"/>
+  <link rel="stylesheet" href="styles/visual-tests.css"/>
 </head>
 <body>
-  <div class="viewport-top-offset"></div>
+  <div class="viewport-top"></div>
   <div class="viewport-middle"></div>
-  <div class="viewport-bottom-offset"></div>
+  <div class="viewport-bottom"></div>
   <div class="test-container"></div>
-  <button class="test-toggle">
-    Run tests
-  </button>
   <script data-main="scripts/main.js" src="components/requirejs/require.js"></script>
 </body>
 </html>
