--- a/tests/visual-tests.html
+++ b/tests/visual-tests.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Viewport Tests</title>
+  <title>Viewport visual tests</title>
   <link rel="stylesheet" href="styles/visual-tests.css"/>
 </head>
 <body>
-  <div class="viewport-top"></div>
+  <div class="viewport-top">
+    <span class="text">
+      Viewport Top
+    </span>
+  </div>
   <div class="viewport-middle"></div>
-  <div class="viewport-bottom"></div>
+  <div class="viewport-bottom">
+    <span class="text">
+      Viewport Bottom
+    </span>
+  </div>
   <div class="test-container"></div>
   <script data-main="scripts/main.js" src="components/requirejs/require.js"></script>
 </body>
