Adding a loading state to the visual tests.

--- a/tests/visual-tests.html
+++ b/tests/visual-tests.html
@@ -4,7 +4,10 @@
   <title>Viewport visual tests</title>
   <link rel="stylesheet" href="styles/visual-tests.css"/>
 </head>
-<body>
+<body class="loading">
+  <div class="loading-container">
+    <div class="icon"></div>
+  </div>
   <div class="viewport-top">
     <span class="text">
       Viewport Top
