--- a/tests/unit-tests.html
+++ b/tests/unit-tests.html
@@ -3,11 +3,34 @@
 <head>
   <meta charset="utf-8">
   <title>Viewport unit tests</title>
-  <link rel="stylesheet" href="components/qunit/qunit/qunit.css">
+  <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script data-main="scripts/main.js" src="components/requirejs/require.js"></script>
+  <script src="../bower_components/jquery/dist/jquery.js"></script>
+  <!-- <script src="../bower_components/lodash/dist/lodash.js"></script> -->
+  <script src="../bower_components/underscore/underscore.js"></script>
+  <script src="../bower_components/qunit/qunit/qunit.js"></script>
+  <script src="../scroll.js"></script>
+  <script src="js/unit-tests/setup.js"></script>
+  <script src="js/unit-tests/test-bindings-trigger.js"></script>
+  <script src="js/unit-tests/test-bindings.js"></script>
+  <script src="js/unit-tests/test-check.js"></script>
+  <script src="js/unit-tests/test-conditions.js"></script>
+  <script src="js/unit-tests/test-document.js"></script>
+  <script src="js/unit-tests/test-height.js"></script>
+  <script src="js/unit-tests/test-off.js"></script>
+  <script src="js/unit-tests/test-offsetOf.js"></script>
+  <script src="js/unit-tests/test-on.js"></script>
+  <script src="js/unit-tests/test-once.js"></script>
+  <script src="js/unit-tests/test-position.js"></script>
+  <script src="js/unit-tests/test-scroll-x.js"></script>
+  <script src="js/unit-tests/test-scroll-y.js"></script>
+  <script src="js/unit-tests/test-settings.js"></script>
+  <script src="js/unit-tests/test-start.js"></script>
+  <script src="js/unit-tests/test-stop.js"></script>
+  <script src="js/unit-tests/test-update.js"></script>
+  <script src="js/unit-tests/test-width.js"></script>
 </body>
 </html>
